# filelist-fix

./: .gitignore  README.md  example.bat  example.sh  filelist_fix.spec  pyproject.toml  test.bat  test.sh  update.bat  update.sh  upload.bat
docs/: api.md  impl.md
example/: demo.py  run_prelude.f
example/complex_rtl/: README.txt  top_chip.v
src/: __main__.py
src/api/: __init__.py  base.py
src/core/: archive_sqlite.py  bin_resolve.py  dep_order.py  dependency_debug_dump.py  fd_search.py  filelist_paths.py  filelist_prelude.py  hdl_extensions.py  parse_context.py  path_exclude.py  path_logical.py  rg_search.py  source_flatten.py  vlog_preproc.py  vlog_scan.py  vlog_squeeze.py
src/impl/: __init__.py
src/runtime/: adaptive_bar_column.py  (+5 more)
tests/: conftest.py  test_cli.py  test_cli_append_nargs.py  test_comment_farm_example.py  test_dep_order.py  test_dependency_debug_dump.py  test_filelist_paths.py  test_hdl_extensions.py  test_ifdef_zoo_example.py  test_include_fd_resolve.py  test_integration_smoke.py  test_logging_setup.py  test_missing_include_warn.py  test_nested_pyramid_example.py  test_path_exclude.py  test_prelude_expand.py  test_preproc.py  test_primitives_gates_example.py  test_save_and_cli.py  test_save_parse_context.py  test_scan_nested_same_file.py  test_squeeze_scan_prep.py  test_sv_package_import_scan.py  test_symlink_paths.py  test_typedef_always_begin_scan.py  test_unresolved_modules.py  test_user_primitive_udp.py  test_vlog_scan_edges.py  tools_bin_seed.py
tools/: README.md  download_rg_fd.bat  download_rg_fd.sh  pack.sh  pack_pyinstaller.sh
(+55 files in other folders)
