[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "filelist-fix"
version = "0.0.0"
description = "Verilog/SystemVerilog filelist builder from top modules."
requires-python = ">=3.10"
dependencies = [
  "python-library-callback>=0.2.1",
  "pydantic>=2.0",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.pytest.ini_options]
pythonpath = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
